--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,11 +3,19 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.DayNight">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-    <item name="colorAccent">@color/colorAccent</item>
+<!--    <item name="colorPrimary">@color/colorPrimary</item>-->
+<!--    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+<!--    <item name="colorAccent">@color/colorAccent</item>-->
+  </style>
+
+
+
+  <style name="textTheme" parent="TextAppearance.AppCompat">
+    <item name="android:textColor">#00FF00</item>
+    <item name="android:textSize">22dp</item>
+
   </style>
 
   <style name="AppTheme.NoActionBar">
