--- a/app/src/main/res/layout/activity_pre_login.xml
+++ b/app/src/main/res/layout/activity_pre_login.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.daniyal.basicappimpl.ui.login.PreLoginActivity">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/pre_login_nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/pre_login_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
