--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.daniyal.basicappimpl.ui.preLogin.PreLoginActivity">
+    tools:context=".ui.postLogin.PostLoginActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/pre_login_nav_host_fragment"
+        android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -16,5 +16,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/pre_login_navigation" />
+        app:navGraph="@navigation/post_login_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
