--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,29 +2,45 @@
 
 <resources>
 
-  <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-    <!-- Customize your theme here. -->
-<!--    <item name="colorPrimary">@color/colorPrimary</item>-->
-<!--    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-<!--    <item name="colorAccent">@color/colorAccent</item>-->
-  </style>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+        <!--    <item name="colorPrimary">@color/colorPrimary</item>-->
+        <!--    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <!--    <item name="colorAccent">@color/colorAccent</item>-->
+    </style>
 
 
+    <style name="textTheme" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:textSize">22dp</item>
 
-  <style name="textTheme" parent="TextAppearance.AppCompat">
-    <item name="android:textColor">#00FF00</item>
-    <item name="android:textSize">22dp</item>
+    </style>
 
-  </style>
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 
-  <style name="AppTheme.NoActionBar">
-    <item name="windowActionBar">false</item>
-    <item name="windowNoTitle">true</item>
-  </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-  <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--HOME-->
+    <style name="HomeTabTextStyle" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="HomeTabStyle" parent="TextAppearance.Design.Tab">
+        <item name="tabIndicatorColor">@color/tabTextColorSelected</item>
+        <item name="tabRippleColor">@null</item>
+        <item name="tabIconTint">@color/home_tab_icon_tint_selector</item>
+        <item name="tabSelectedTextColor">@color/tabTextColorSelected</item>
+        <item name="tabTextAppearance">@style/HomeTabTextStyle</item>
+        <item name="tabIndicatorFullWidth">false</item>
+        <item name="tabTextColor">@color/tabTextColorUnSelected</item>
+    </style>
 
 </resources>
