--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <!--    <item name="colorPrimary">@color/colorPrimary</item>-->
         <!--    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
@@ -42,5 +42,13 @@
         <item name="tabIndicatorFullWidth">false</item>
         <item name="tabTextColor">@color/tabTextColorUnSelected</item>
     </style>
+
+
+    <style name="ButtonStyle">
+        <item name="android:background">@drawable/ic_login_next_selector</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 
 </resources>
