Login Screen Design Work Completed

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,9 +48,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="@{()->viewmodel.getRegistered()}"
 
                     >
+                    <!--                    android:onClick="@{()->viewmodel.getRegistered()}"-->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -65,8 +65,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="@{()->viewmodel.forgotPassword()}"
+
                     >
+<!--                    android:onClick="@{()->viewmodel.forgotPassword()}"-->
 
                     <TextView
                         android:layout_width="wrap_content"
