--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 <!--  bottom tabs - home-->
   <color name="tabTextColorSelected">#E34A48</color>
   <color name="tabTextColorUnSelected">#1A1818</color>
+  <color name="LoginLayoutSuccessColor">@android:color/holo_green_light</color>
 
 
 </resources>
