--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -57,8 +57,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="5dp"
-                        android:text="Get Registered"
-                        android:textColor="@color/colorPrimary"
+                        android:text="Sign Up  ?"
+                        android:textColor="@color/colorAccent"
                         android:textStyle="bold" />
                 </FrameLayout>
 
@@ -77,7 +77,7 @@
                         android:layout_gravity="center"
                         android:layout_margin="5dp"
                         android:text="Forgot Password ?"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/colorAccent"
                         android:textStyle="bold" />
                 </FrameLayout>
             </LinearLayout>
@@ -98,12 +98,13 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/emailLayout"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    style="@style/LoginTextInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:hint="@string/email"
+                    app:hintTextColor="@color/LoginLayoutSuccessColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -143,12 +144,13 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/passWordLayout"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    style="@style/LoginTextInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:hint="@string/password"
+                    app:hintTextColor="@color/LoginLayoutSuccessColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -161,13 +163,10 @@
                         android:layout_height="wrap_content"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
-
                         android:onTextChanged="@{viewmodel::onPasswordChanged}"
                         android:paddingStart="5dp"
                         android:paddingLeft="5dp"
                         android:text="@={viewmodel.password}"
-                        android:textColor="#383838"
-                        android:textSize="20sp"
                         app:backgroundTint="@color/colorPrimaryDark" />
                 </com.google.android.material.textfield.TextInputLayout>
 
