--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <!--    <item name="colorPrimary">@color/colorPrimary</item>-->
         <!--    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
@@ -16,7 +16,7 @@
     </style>
 
 
-    <style name="textTheme" parent="TextAppearance.AppCompat">
+    <style name="textTheme" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">#00FF00</item>
         <item name="android:textSize">22dp</item>
 
