Popup to splash screen from navigation graph.

--- a/app/src/main/res/navigation/pre_login_navigation.xml
+++ b/app/src/main/res/navigation/pre_login_navigation.xml
@@ -10,6 +10,8 @@
         tools:layout="@layout/fragment_splash"
         android:label="fragment_splash">
         <action
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true"
             android:id="@+id/action_splashFragment_to_galleryFragment"
             app:destination="@id/galleryFragment" />
     </fragment>
